--- a/project/home/templates/shop/shop_index.html
+++ b/project/home/templates/shop/shop_index.html
@@ -39,7 +39,7 @@
 {% block content %}
 {% if user.is_authenticated %}
 <div class="container my-5">
-    <h1 class="text-center mb-4">Coffee Beans Shop</h1>
+    <h1 class="text-center mb-4">Coffee Shop</h1>
     <div class="row g-4">
         <!-- Card  -->
          {% for coffee in cofees  %}
