--- a/project/home/templates/contact.html
+++ b/project/home/templates/contact.html
@@ -25,8 +25,8 @@
             <h4>We'd love to hear from you!</h4>
             <p>Feel free to reach out to us with any questions, feedback, or just to say hello.</p>
             <ul class="list-unstyled">
-                <li><strong>Address:</strong> 123 Coffee Street, Bean Town, USA</li>
-                <li><strong>Phone:</strong> +1 (123) 456-7890</li>
+                <li><strong>Address:</strong> 123 Coffee Street,Bangalore</li>
+                <li><strong>Phone:</strong> +91 9320562464</li>
                 <li><strong>Email:</strong> contact@coffeeshop.com</li>
                 <li><strong>Working Hours:</strong> Mon-Sun, 8:00 AM - 8:00 PM</li>
             </ul>
