--- a/project/home/templates/order/order.html
+++ b/project/home/templates/order/order.html
@@ -7,7 +7,7 @@
     <div class="container-fluid">
         <!-- Logo -->
         <a class="navbar-brand" href="/">
-            <img src="{% static 'images/coffe.png' %}" alt="Logo" width="50" height="50" class="d-inline-block align-text-top">
+            <img src="{% static 'products/coffe.png' %}" alt="Logo" width="50" height="50" class="d-inline-block align-text-top">
             CoffeShop
         </a>
         <div class="d-flex ms-auto">
