fixed index button explore menu

--- a/project/home/templates/home/home_index.html
+++ b/project/home/templates/home/home_index.html
@@ -25,7 +25,7 @@
     <div class="container">
         <h1 class="display-4 fw-bold">Welcome to Coffee Shop</h1>
         <p class="lead">Your perfect cup of coffee awaits.</p>
-        <a href="#menu" class="btn btn-warning text-dark rounded-pill">Explore Our Menu</a>
+        <a href="{% url 'shop' %}" class="btn btn-warning text-dark rounded-pill">Explore Our Menu</a>
     </div>
 </header>
 {% endblock header %}
