fixxed: coffee quantity not showing in template

--- a/project/home/templates/shop/shop_index.html
+++ b/project/home/templates/shop/shop_index.html
@@ -53,7 +53,7 @@
                 <div class="card-body">
                     <h5 class="card-title">{{coffe.name}}</h5>
                     <p class="card-text">Price: ${{coffee.price}} / lb</p>
-                    <p class="card-text">Quantity: {{cofee.quantity}} lbs available</p>
+                    <p class="card-text">Quantity: {{coffee.quantity}} lbs available</p>
                     {% if coffee.stock %}
                     <p class="card-text text-success">Available</p>
                     {% else %}
