--- a/project/home/templates/order/order.html
+++ b/project/home/templates/order/order.html
@@ -28,9 +28,8 @@
         <div class="col-md-6">
             <h2>{{coffe.name}}</h2>
             <p class="text-muted">Category: Latte</p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
             <p class="d-inline fs-2" id="price">$ {{ coffee.price }}</p>
-            
+            <p> {{ coffee.description }}</p>
             <!-- Quantity Counter -->
             <div class="d-flex align-items-center my-4">
                 <button class="btn btn-outline-secondary" id="decrease"><a class="link-secondary link-offset-2 link-underline link-underline-opacity-0" href={% url "item_decrement" coffee.id %}>-</a></button>
@@ -40,7 +39,6 @@
             
             <!-- Checkout Button -->
             <a href="{% url 'cart_add' coffee.id %}"><button class="btn btn-light w-100 mb-2" id="checkout">Add to cart</button></a>
-            <a href="{% url 'checkout' %}"><button class="btn btn-primary w-100">Checkout</button></a>
         </div>
     </div>
 </div>
