fixed: removed order number

--- a/project/home/templates/cart/cart.html
+++ b/project/home/templates/cart/cart.html
@@ -37,7 +37,7 @@
             <div class="accordion-item">
                 <h2 class="accordion-header" id="orderHeading1">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#orderCollapse1" aria-expanded="false" aria-controls="orderCollapse1">
-                        Order #{{order.order_number}} - November 20, 2024 - $24.50
+                        Order #
                     </button>
                 </h2>
                 <div id="orderCollapse1" class="accordion-collapse collapse" aria-labelledby="orderHeading1" data-bs-parent="#ordersAccordion">
