--- a/project/home/templates/contact.html
+++ b/project/home/templates/contact.html
@@ -8,7 +8,7 @@
         <div class="container-fluid">
             <!-- Logo -->
             <a class="navbar-brand" href="/">
-                <img src="{% static 'images/coffe.png' %}" alt="Logo" width="50" height="50" class="d-inline-block align-text-top">
+                <img src="{% static 'products/coffe.png' %}" alt="Logo" width="50" height="50" class="d-inline-block align-text-top">
                 CoffeeShop
             </a>
         </div>
